tests/compilation/no_function_auto_compute.stderr
error[E0599]: no method named `auto_compute` found for reference `&Struct` in the current scope
 --> tests/compilation/no_function_auto_compute.rs:9:14
  |
9 |     #[derive(Equation)]
  |              ^^^^^^^^
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `auto_compute`, perhaps you need to implement it:
          candidate #1: `EquationAutoCompute`
  = note: this error originates in the derive macro `Equation` (in Nightly builds, run with -Z macro-backtrace for more info)
